--- a/index.html
+++ b/index.html
@@ -61,19 +61,101 @@
     <h2 class="heading">About <span>Me</span></h2>
 
     <div class="about-img">
-      <img src="src/images/img.jpg" alt="img">
+      <img src="src/images/foto.jpg" alt="img">
       <span class="circle-spin"></span>
     </div>
 
     <div class="about-content">
-      <h3>Frontend Developer!</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore harum ut dolores animi dolor quam accusamus
-        officia maiores cumque. Iure assumenda eveniet consectetur dolore nam minima quos earum. Magnam, voluptatum.
+      <h3>Frontend Developer (Angular)</h3>
+      <p>Passionate Angular developer seeking exciting opportunities to contribute expertise and dedication. Committed
+        to constant learning and collaboration within a talented team. Open to advice, contacts, and opportunities for
+        professional growth. Grateful for your time and consideration. Let's create exceptional web solutions together!
+        🚀
       </p>
 
       <div class="btn-box btns">
         <a href="#" class="btn">Read More</a>
       </div>
+    </div>
+  </section>
+
+  <!-- education section design -->
+
+  <section class="education" id="education">
+    <h2 class="heading">My <span>Journey</span></h2>
+
+    <div class="education-row">
+      <div class="education-column">
+        <h3 class="title">Education</h3>
+        <div class="education-box">
+          <div class="education-content">
+            <div class="content">
+              <div class="year"><i class='bx bx-calendar'></i>2011 - 2016</div>
+              <h3>Uneversity</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
+                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
+                aliquid excepturi!</p>
+            </div>
+          </div>
+
+          <div class="education-content">
+            <div class="content">
+              <div class="year"><i class='bx bx-calendar'></i>2016 - 2017</div>
+              <h3>Uneversity</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
+                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
+                aliquid excepturi!</p>
+            </div>
+          </div>
+
+          <div class="education-content">
+            <div class="content">
+              <div class="year"><i class='bx bx-calendar'></i>2017 - 2019</div>
+              <h3>Uneversity</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
+                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
+                aliquid excepturi!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="education-column">
+        <h3 class="title">Expeience</h3>
+        <div class="education-box">
+          <div class="education-content">
+            <div class="content">
+              <div class="year"><i class='bx bx-calendar'></i>2011 - 2016</div>
+              <h3>Wed Developer - Company</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
+                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
+                aliquid excepturi!</p>
+            </div>
+          </div>
+
+          <div class="education-content">
+            <div class="content">
+              <div class="year"><i class='bx bx-calendar'></i>2016 - 2017</div>
+              <h3>Wed Developer - Company</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
+                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
+                aliquid excepturi!</p>
+            </div>
+          </div>
+
+          <div class="education-content">
+            <div class="content">
+              <div class="year"><i class='bx bx-calendar'></i>2017 - 2019</div>
+              <h3>Wed Developer - Company</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
+                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
+                aliquid excepturi!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </section>
 
