--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <h2 class="heading">About <span>Me</span></h2>
 
     <div class="about-img">
-      <img src="src/images/foto.jpg" alt="img">
+      <img src="assets/images/foto.jpg" alt="img">
       <span class="circle-spin"></span>
     </div>
 
@@ -154,11 +154,81 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
-  <script src="src/js/script.js"></script>
+  <!-- created skills section design -->
+
+  <section class="skills" id="skills">
+    <h2 class="heading">My <span>Skills</span></h2>
+
+    <div class="skills-row">
+      <div class="skills-column">
+        <h3 class="title">Coding Skills</h3>
+
+        <div class="skills-box">
+          <div class="skills-content">
+            <div class="progress">
+              <h3>HTML <span>90%</span></h3>
+              <div class="bar"><span></span></div>
+            </div>
+
+            <div class="progress">
+              <h3>CSS <span>80%</span></h3>
+              <div class="bar"><span></span></div>
+            </div>
+
+            <div class="progress">
+              <h3>JavaScript <span>80%</span></h3>
+              <div class="bar"><span></span></div>
+            </div>
+
+            <div class="progress">
+              <h3>SCSS <span>80%</span></h3>
+              <div class="bar"><span></span></div>
+            </div>
+
+            <div class="progress">
+              <h3>Angular <span>70%</span></h3>
+              <div class="bar"><span></span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="skills-column">
+        <h3 class="title">Professional Skills</h3>
+
+        <div class="skills-box">
+          <div class="skills-content">
+            <div class="progress">
+              <h3>Web Design <span>90%</span></h3>
+              <div class="bar"><span></span></div>
+            </div>
+
+            <div class="progress">
+              <h3>Web Development <span>65%</span></h3>
+              <div class="bar"><span></span></div>
+            </div>
+
+            <div class="progress">
+              <h3>Grafic Design <span>67%</span></h3>
+              <div class="bar"><span></span></div>
+            </div>
+
+            <div class="progress">
+              <h3>SEO Marketing <span>65%</span></h3>
+              <div class="bar"><span></span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- contact section design -->
+
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
