--- a/index.html
+++ b/index.html
@@ -227,6 +227,42 @@
   </section>
 
   <!-- contact section design -->
+  <section class="contact" id="contact">
+    <h2 class="heading">Contact <span>Me!</span></h2>
+
+    <form action="">
+      <div class="input-box">
+        <div class="input-field">
+          <input type="text" placeholder="Full Name" required>
+          <span class="focus"></span>
+        </div>
+        <div class="input-field">
+          <input type="text" placeholder="Email Adress" required>
+          <span class="focus"></span>
+        </div>
+      </div>
+
+      <div class="input-box">
+        <div class="input-field">
+          <input type="number" placeholder="Mobilephone" required>
+          <span class="focus"></span>
+        </div>
+        <div class="input-field">
+          <input type="text" placeholder="Email Subject" required>
+          <span class="focus"></span>
+        </div>
+      </div>
+
+      <div class="textarea-field">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your message" required></textarea>
+        <span class="focus"></span>
+      </div>
+
+      <div class="btn-box btns">
+        <button class="btn" type="submit">Submit</button>
+      </div>
+    </form>
+  </section>
 
   <script src="assets/js/script.js"></script>
 </body>
