--- a/index.html
+++ b/index.html
@@ -264,6 +264,18 @@
     </form>
   </section>
 
+  <!-- footer design -->
+  <footer class="footer">
+    <div class="footer-text">
+      <p>Copyrigth &copy; Yaroslav Kashkarov 2024</p>
+    </div>
+
+    <div class="footer-iconTop">
+      <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
+    </div>
+  </footer>
+
+
   <script src="assets/js/script.js"></script>
 </body>
 
