--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- header desing -->
   <header class="header">
-    <a href="#" class="logo">Yaroslav.</a>
+    <a href="#" class="logo">Yaroslav Kashkarov</a>
 
     <div class="bx bx-menu" id="menu-icon"></div>
 
