сontinued writing of the site and integration for adaptive design

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>My Portfolio</title>
   <!-- box icons -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link type="img/x-com" rel="icon" href="assets/images/favicon.png">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -14,9 +15,9 @@
 
   <!-- header desing -->
   <header class="header">
-    <a href="#" class="logo">Yaroslav Kashkarov</a>
+    <a href="#" class="logo">Yaroslav Kashkarov<span class="animate" style="--i:1;"></span></a>
 
-    <div class="bx bx-menu" id="menu-icon"></div>
+    <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
     <nav class="navbar">
       <a href="#home" class="active">Home</a>
@@ -26,15 +27,19 @@
       <a href="#contact">Contact</a>
 
       <span class="active-nav"></span>
+      <span class="animate" style="--i:2;"></span>
     </nav>
   </header>
 
   <!-- home section design -->
-  <section class="home" id="home">
+  <section class="home show-animate" id="home">
     <div class="home-content">
-      <h1>Hi, I'm <span>Yaroslav Kashkarov</span></h1>
+      <h1>Hi, I'm <span>Yaroslav Kashkarov</span>
+        <span class="animate" style="--i:2;"></span>
+      </h1>
       <div class="text-animate">
         <h3>Frontend Developer</h3>
+        <span class="animate" style="--i:3;"></span>
       </div>
       <p>Passionate Angular developer seeking exciting opportunities to contribute expertise and dedication. Committed
         to constant learning and collaboration within a talented team. Open to advice, contacts, and opportunities for
