--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
         to constant learning and collaboration within a talented team. Open to advice, contacts, and opportunities for
         professional growth. Grateful for your time and consideration. Let's create exceptional web solutions together!
         🚀
-
+        <span class="animate" style="--i:4;"></span>
       </p>
       <div class="btn-box">
         <a href="#" class="btn">Hire Me</a>
         <a href="#" class="btn">Let's Talk</a>
+        <span class="animate" style="--i:5;"></span>
+
       </div>
     </div>
 
@@ -57,16 +59,19 @@
       <a href="#"><i class='bx bxl-facebook-circle'></i></a>
       <a href="#"><i class='bx bxl-instagram'></i></a>
       <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+      <span class="animate" style="--i:6;"></span>
     </div>
 
     <div class="hone-imgHover"></div>
+    <span class="animate home-img" style="--i:7;"></span>
+
   </section>
 
   <!-- about section design -->
 
   <section class="about" id="about">
-    <h2 class="heading">About <span>Me</span></h2>
 
+    <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
     <div class="about-img">
       <img src="assets/images/foto.jpg" alt="img">
       <span class="circle-spin"></span>
