--- a/index.html
+++ b/index.html
@@ -75,18 +75,21 @@
     <div class="about-img">
       <img src="assets/images/foto.jpg" alt="img">
       <span class="circle-spin"></span>
+      <span class="animate scroll" style="--i:2;"></span>
     </div>
 
     <div class="about-content">
-      <h3>Frontend Developer (Angular)</h3>
+      <h3>Frontend Developer (Angular)<span class="animate scroll" style="--i:3;"></span></h3>
       <p>Passionate Angular developer seeking exciting opportunities to contribute expertise and dedication. Committed
         to constant learning and collaboration within a talented team. Open to advice, contacts, and opportunities for
         professional growth. Grateful for your time and consideration. Let's create exceptional web solutions together!
         🚀
+        <span class="animate scroll" style="--i:4;"></span>
       </p>
 
       <div class="btn-box btns">
         <a href="#" class="btn">Read More</a>
+        <span class="animate scroll" style="--i:5;"></span>
       </div>
     </div>
   </section>
@@ -94,11 +97,11 @@
   <!-- education section design -->
 
   <section class="education" id="education">
-    <h2 class="heading">My <span>Journey</span></h2>
+    <h2 class="heading">My <span>Journey</span><span class="animate scroll" style="--i:1;"></span></h2>
 
     <div class="education-row">
       <div class="education-column">
-        <h3 class="title">Education</h3>
+        <h3 class="title">Education<span class="animate scroll" style="--i:2;"></span></h3>
         <div class="education-box">
           <div class="education-content">
             <div class="content">
@@ -129,11 +132,13 @@
                 aliquid excepturi!</p>
             </div>
           </div>
+
+          <span class="animate scroll" style="--i:3;"></span>
         </div>
       </div>
 
       <div class="education-column">
-        <h3 class="title">Expeience</h3>
+        <h3 class="title">Expeience <span class="animate scroll" style="--i:5;"></span></h3>
         <div class="education-box">
           <div class="education-content">
             <div class="content">
@@ -164,6 +169,8 @@
                 aliquid excepturi!</p>
             </div>
           </div>
+
+          <span class="animate scroll" style="--i:6;"></span>
         </div>
       </div>
     </div>
@@ -172,11 +179,11 @@
   <!-- created skills section design -->
 
   <section class="skills" id="skills">
-    <h2 class="heading">My <span>Skills</span></h2>
+    <h2 class="heading">My <span>Skills</span><span class="animate scroll" style="--i:1;"></span></h2>
 
     <div class="skills-row">
       <div class="skills-column">
-        <h3 class="title">Coding Skills</h3>
+        <h3 class="title">Coding Skills<span class="animate scroll" style="--i:2;"></span></h3>
 
         <div class="skills-box">
           <div class="skills-content">
@@ -205,11 +212,13 @@
               <div class="bar"><span></span></div>
             </div>
           </div>
+
+          <span class="animate scroll" style="--i:3;"></span>
         </div>
       </div>
 
       <div class="skills-column">
-        <h3 class="title">Professional Skills</h3>
+        <h3 class="title">Professional Skills<span class="animate scroll" style="--i:5;"></span></h3>
 
         <div class="skills-box">
           <div class="skills-content">
@@ -233,6 +242,8 @@
               <div class="bar"><span></span></div>
             </div>
           </div>
+
+          <span class="animate scroll" style="--i:6;"></span>
         </div>
       </div>
     </div>
@@ -240,7 +251,7 @@
 
   <!-- contact section design -->
   <section class="contact" id="contact">
-    <h2 class="heading">Contact <span>Me!</span></h2>
+    <h2 class="heading">Contact <span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
 
     <form action="">
       <div class="input-box">
@@ -252,6 +263,8 @@
           <input type="text" placeholder="Email Adress" required>
           <span class="focus"></span>
         </div>
+
+        <span class="animate scroll" style="--i:3;"></span>
       </div>
 
       <div class="input-box">
@@ -263,15 +276,20 @@
           <input type="text" placeholder="Email Subject" required>
           <span class="focus"></span>
         </div>
+        <span class="animate scroll" style="--i:5;"></span>
       </div>
 
       <div class="textarea-field">
         <textarea name="" id="" cols="30" rows="10" placeholder="Your message" required></textarea>
         <span class="focus"></span>
+
+        <span class="animate scroll" style="--i:7;"></span>
       </div>
 
       <div class="btn-box btns">
         <button class="btn" type="submit">Submit</button>
+
+        <span class="animate scroll" style="--i:9;"></span>
       </div>
     </form>
   </section>
@@ -280,10 +298,14 @@
   <footer class="footer">
     <div class="footer-text">
       <p>Copyrigth &copy; Yaroslav Kashkarov 2024</p>
+
+      <span class="animate scroll" style="--i:1;"></span>
     </div>
 
     <div class="footer-iconTop">
       <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
+
+      <span class="animate scroll" style="--i:3;"></span>
     </div>
   </footer>
 
