--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <span class="animate" style="--i:6;"></span>
     </div>
 
-    <div class="hone-imgHover"></div>
+    <div class="home-imgHover"></div>
     <span class="animate home-img" style="--i:7;"></span>
 
   </section>
@@ -73,7 +73,7 @@
 
     <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
     <div class="about-img">
-      <img src="assets/images/foto.jpg" alt="img">
+      <img src="assets/images/about.jpg" alt="img">
       <span class="circle-spin"></span>
       <span class="animate scroll" style="--i:2;"></span>
     </div>
