modificated file index.html for block My Journey

--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
     </div>
 
     <div class="home-sci">
-      <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-      <a href="#"><i class='bx bxl-instagram'></i></a>
-      <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+      <a target="_blank" href="https://www.facebook.com/yarik.kashkarov"><i class='bx bxl-facebook-circle'></i></a>
+      <a target="_blank" href="https://www.instagram.com/yarikkashkarov/?hl=ru""><i class='bx bxl-instagram'></i></a>
+      <a target=" _blank" href=" https://www.linkedin.com/in/yaroslav-kashkarov-23a8a826a/"><i
+          class='bx bxl-linkedin-square'></i></a>
       <span class="animate" style="--i:6;"></span>
     </div>
 
@@ -97,7 +98,7 @@
   <!-- education section design -->
 
   <section class="education" id="education">
-    <h2 class="heading">My <span>Journey</span><span class="animate scroll" style="--i:1;"></span></h2>
+    <h2 class="heading">My<span>Journey</span><span class="animate scroll" style="--i:1;"></span></h2>
 
     <div class="education-row">
       <div class="education-column">
@@ -105,31 +106,38 @@
         <div class="education-box">
           <div class="education-content">
             <div class="content">
-              <div class="year"><i class='bx bx-calendar'></i>2011 - 2016</div>
-              <h3>Uneversity</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
-                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
-                aliquid excepturi!</p>
+              <div class="year"><i class='bx bx-calendar'></i>1996 - 2006</div>
+              <h3>School</h3>
+              <p>Studying in school has been a transformative journey for me. I've gained a solid foundation in subjects
+                like math, science, and literature, while developing critical skills such as time management and
+                teamwork. Engaging in various extracurricular activities has allowed me to explore my interests and
+                build lasting friendships. My teachers have been supportive, guiding me through challenges and
+                celebrating my successes. Overall, school has prepared me well for future academic and personal growth.
+              </p>
             </div>
           </div>
 
           <div class="education-content">
             <div class="content">
-              <div class="year"><i class='bx bx-calendar'></i>2016 - 2017</div>
+              <div class="year"><i class='bx bx-calendar'></i>2006 - 2011</div>
               <h3>Uneversity</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
-                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
-                aliquid excepturi!</p>
+              <p>Studying at university has been an enriching experience for me. I've delved deep into my chosen field,
+                gaining specialized knowledge and practical skills. The diverse campus community has broadened my
+                perspectives, and participating in various clubs and projects has enhanced my leadership and teamwork
+                abilities. My professors have been inspiring mentors, guiding my academic journey and encouraging my
+                personal growth. Overall, university life has prepared me well for my future career and personal
+                endeavors.</p>
             </div>
           </div>
 
           <div class="education-content">
             <div class="content">
-              <div class="year"><i class='bx bx-calendar'></i>2017 - 2019</div>
-              <h3>Uneversity</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
-                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
-                aliquid excepturi!</p>
+              <div class="year"><i class='bx bx-calendar'></i>2011 - 2018</div>
+              <h3>Military service</h3>
+              <p>Serving in the army has been a transformative experience for me. It taught me discipline, resilience,
+                and leadership. I developed strong teamwork skills and learned to perform under pressure. The training
+                and challenges I faced have shaped me into a more responsible and focused individual. My time in the
+                army has prepared me well for future endeavors, both personally and professionally.</p>
             </div>
           </div>
 
@@ -138,35 +146,44 @@
       </div>
 
       <div class="education-column">
-        <h3 class="title">Expeience <span class="animate scroll" style="--i:5;"></span></h3>
+        <h3 class="title">Expeience<span class="animate scroll" style="--i:5;"></span></h3>
         <div class="education-box">
           <div class="education-content">
             <div class="content">
-              <div class="year"><i class='bx bx-calendar'></i>2011 - 2016</div>
-              <h3>Wed Developer - Company</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
-                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
-                aliquid excepturi!</p>
+              <div class="year"><i class='bx bx-calendar'></i>2018 - 2022</div>
+              <h3>Job in Poland</h3>
+              <p>Working in Poland has been a rewarding journey for me. I've had the opportunity to contribute to
+                diverse projects and collaborate with talented professionals from around the world. The dynamic work
+                environment and supportive colleagues have fostered my personal and professional growth. Additionally,
+                living in Poland has exposed me to rich cultural experiences and provided a high quality of life.
+                Overall, my time working in Poland has been fulfilling, and I look forward to continued success in my
+                career here.</p>
             </div>
           </div>
 
           <div class="education-content">
             <div class="content">
-              <div class="year"><i class='bx bx-calendar'></i>2016 - 2017</div>
-              <h3>Wed Developer - Company</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
-                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
-                aliquid excepturi!</p>
+              <div class="year"><i class='bx bx-calendar'></i>2022 - 2023</div>
+              <h3>Frontend Programming Course</h3>
+              <p>Enrolling in Frontend courses has been an enlightening journey for me. I've honed my skills in HTML,
+                CSS, and JavaScript, and delved into frameworks like Angular. Through hands-on projects and
+                practical exercises, I've gained valuable experience in creating responsive and interactive web
+                interfaces. These courses have equipped me with the necessary tools to pursue a career in web
+                development and have ignited a passion for creating engaging user experiences.</p>
             </div>
           </div>
 
           <div class="education-content">
             <div class="content">
-              <div class="year"><i class='bx bx-calendar'></i>2017 - 2019</div>
-              <h3>Wed Developer - Company</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatibus, illo debitis illum aut
-                quaerat similique, delectus placeat dignissimos numquam culpa id nemo. Non id similique labore incidunt
-                aliquid excepturi!</p>
+              <div class="year"><i class='bx bx-calendar'></i>2023 - present</div>
+              <h3>Frontend Developer - Company TeamChellenge</h3>
+              <p>As a Frontend Developer at TeamChallenge, I've had the privilege of bringing innovative designs to life
+                through code. Collaborating closely with designers and backend developers, I've translated concepts into
+                user-friendly interfaces that enhance the user experience. My expertise in HTML, CSS, and JavaScript has
+                enabled me to create dynamic and responsive web applications that captivate users. With each project,
+                I've embraced new challenges, honed my skills, and contributed to the success of our team. I'm proud to
+                be part of a company that values creativity, teamwork, and pushing the boundaries of what's possible in
+                web development.</p>
             </div>
           </div>
 
